<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_location" />

    </group>
</menu>